BUGFIX: Add internal gap to service provider card

--- a/DistributionPackages/Neos.NeosIo.ServiceOfferings/Resources/Private/Scss/Main.scss
+++ b/DistributionPackages/Neos.NeosIo.ServiceOfferings/Resources/Private/Scss/Main.scss
@@ -170,6 +170,7 @@
         padding: 1rem;
         position: relative;
         display:grid;
+        grid-gap: .3rem;
         grid-template-rows: 1fr auto auto;
         grid-template-columns: 1fr auto;
         grid-template-areas:
